Tue Oct 24 14:32:45 1995  Norbert Kiesel  <nk@col.sw-ley.de>

	* admin.c (admin): use getcaller() instead of getpwuid

	* subr.c (getcaller): prefer getlogin() to $USER and $LOGNAME
	  (especially useful for NT where getuid always returns 0)

Tue Oct 24 06:22:08 1995  Jim Meyering  (meyering@comco.com)

	* cvsrc.c (read_cvsrc): Use getline instead of fgets.
	* patch.c (patch_fileproc): Use getline instead of fgets.

	* entries.c (fgetentent): Use getline instead of fgets.
	Use xmalloc to allocate space for each returned entry.
	Since LINE is no longer static, save it in struct entent.
	(struct entent): New member, line.
	(free_entent): New function.
	(Entries_Open): Call it after each call to fgetentent.

Tue Oct 24 11:13:15 1995  Norbert Kiesel  <nk@col.sw-ley.de>

	* cvs.h: Declare valloc again, but this time with the right
	  signature (also changed in libs/valloc.c)

Mon Oct 23 12:17:03 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* logmsg.c (do_editor): Check for errors from stdio calls.

Mon Oct 23 12:37:06 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* cvs.h: Don't declare valloc.  Some systems (e.g. linux) declare
	it in stdlib.h in a conflicting way.

Mon Oct 23 08:41:25 1995  Jim Meyering  (meyering@comco.com)

	* commit.c (commit_filesdoneproc): Use getline instead of fgets.

	* logmsg.c (do_editor): Use getline instead of fgets.
	(rcsinfo_proc): Likewise.

	* logmsg.c (do_editor): Lose if fclose of temp file output
	stream fails.

Mon Oct 23 11:59:41 1995  Norbert Kiesel  <nk@col.sw-ley.de>

	* cvs.h: add valloc declaration

	* server.h: add server_cleanup prototype

	* server.c: remove server_cleanup prototype

	* mkmodules.c (server_cleanup): fix parameter type

	* server.c: encapsulate wait_sig in #ifdef sun (it's only used in
	  code which is also encapsulated in #ifdef sun)

	* rcscmds.c (RCS_deltag, RCS_lock): add definition of noerr
	  parameter

	* error.c: include cvs.h instead of config.h, add USE(rcsid)
